feat: creating documentation for the 'create opening' endpoint with swagger
