# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/reishenrique/job-gopportunities/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, message string) {
@@ -23,5 +24,14 @@ func sendSuccess(ctx *gin.Context, operation string, data interface{}) {
 		"message": fmt.Sprintf("operation from handler: %s successfull", operation),
 		"data": data,
 	})
+}
 
+type ErrorResponse struct {
+	Message string `json:"message"`
+	ErrorCode string `json:"data"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
 }
